language/move-lang/tests/move_check/parser/function_params_missing.exp
error: 

   ┌── tests/move_check/parser/function_params_missing.move:3:8 ───
   │
 3 │     fn { }
   │        ^ Unexpected token: '{'
   ·
 3 │     fn { }
   │        - Expected: '('
   │

